Alteração do nome da entidade DataComemorativa para Periodo.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,5 @@
 typeMismatch.java.time.LocalDate = O campo {0} est\u00E1 inv\u00E1lido
 
 # Atributos
-dataComemorativa.data = Data
+periodo.dataInicial = Data Inicial
+periodo.dataFinal = Data Final
